cbits/Bullet.h

float btWheelInfoConstructionInfo_m_suspensionStiffness_get(void *c); //attribute: ::btScalar btWheelInfoConstructionInfo->m_suspensionStiffness
void btWheelInfoConstructionInfo_m_wheelAxleCS_set(void *c,float* a); //attribute: ::btVector3 btWheelInfoConstructionInfo->m_wheelAxleCS
void btWheelInfoConstructionInfo_m_wheelAxleCS_get(void *c,float* a);
void btWheelInfoConstructionInfo_m_wheelDirectionCS_set(void *c,float* a); //attribute: ::btVector3 btWheelInfoConstructionInfo->m_wheelDirectionCS
void btWheelInfoConstructionInfo_m_wheelDirectionCS_get(void *c,float* a);
void btWheelInfoConstructionInfo_m_wheelRadius_set(void *c,float a); //attribute: ::btScalar btWheelInfoConstructionInfo->m_wheelRadius
float btWheelInfoConstructionInfo_m_wheelRadius_get(void *c); //attribute: ::btScalar btWheelInfoConstructionInfo->m_wheelRadius
void btWheelInfoConstructionInfo_m_wheelsDampingCompression_set(void *c,float a); //attribute: ::btScalar btWheelInfoConstructionInfo->m_wheelsDampingCompression
float btWheelInfoConstructionInfo_m_wheelsDampingCompression_get(void *c); //attribute: ::btScalar btWheelInfoConstructionInfo->m_wheelsDampingCompression
void btWheelInfoConstructionInfo_m_wheelsDampingRelaxation_set(void *c,float a); //attribute: ::btScalar btWheelInfoConstructionInfo->m_wheelsDampingRelaxation
float btWheelInfoConstructionInfo_m_wheelsDampingRelaxation_get(void *c); //attribute: ::btScalar btWheelInfoConstructionInfo->m_wheelsDampingRelaxation